--- a/public/views/logins/enfermera/formConsulta.html
+++ b/public/views/logins/enfermera/formConsulta.html
@@ -4,23 +4,18 @@
             <a href="#!indexEnf" title="Inicio"><i class="fa fa-home fa-4x ml-3" aria-hidden="true"></i></a>
         </li>
         <li class="sala">
-            <a href="#!consulta" title="Sala de Consultas"><i class="fa fa-heartbeat fa-4x ml-3" aria-hidden="true"></i></a>
+            <a href="#!salaEnf#init" title="Sala de Consultas"><i class="fa fa-heartbeat fa-4x ml-3" aria-hidden="true"></i></a>
         </li>
-        <li class="consultas">
-            <a href="#!misCons" title="Mis Consultas"><i class="fa fa-clipboard fa-3x ml-3 mt-2" aria-hidden="true"></i></a>
-        </li>
-        <li class="estadisticas">
-            <a href="#!misCons" title="Estadísticas"><i class="fa fa-table fa-3x ml-3 mt-2" aria-hidden="true"></i></a>
-        </li>
+
         <li class="logOut">
-            <a href="#!indexMed" title="Cerrar Sesión"><i class="fa fa-sign-out fa-4x ml-3" aria-hidden="true"></i></a>
+            <a ng-click="cerrar()" href="#" title="Cerrar Sesión"><i class="fa fa-sign-out fa-4x ml-3" aria-hidden="true"></i></a>
         </li>
     </ul>
     <!-- Logo y el nombre de la enfermera -->
     <div class="container">
         <div class="row">
             <div class="col">
-                <a href="#!/indexMed" class="logo ">
+                <a href="#!/indexEnf" class="logo ">
                     <img src="/images/logo-consultorio-medico.png" alt="logo" class="mt-1">
                 </a>
             </div>
