--- a/public/views/logins/medico/consultas.html
+++ b/public/views/logins/medico/consultas.html
@@ -16,7 +16,7 @@
             <a href="#!regisEnfermera" title="Registrar Enfermera"><i class="fa fa-user-plus fa-3x ml-3 mt-2" aria-hidden="true"></i></a>
         </li>
         <li class="logOut">
-            <a href="#!indexMed" title="Cerrar Sesión"><i class="fa fa-sign-out fa-4x ml-3" aria-hidden="true"></i></a>
+            <a ng-click="cerrar()" href="#" title="Cerrar Sesión"><i class="fa fa-sign-out fa-4x ml-3" aria-hidden="true"></i></a>
         </li>
     </ul>
     <!-- Logo y el nombre del médico -->
